limit zooming, fix browser resizing, fix padding overflow, fix less reloading

--- a/client/style/index.less
+++ b/client/style/index.less
@@ -5,4 +5,5 @@ body {
   color: white;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
